Fixed letter clipping on About Us page

--- a/client/src/component/About-Us/about.scss
+++ b/client/src/component/About-Us/about.scss
@@ -155,6 +155,7 @@
           overflow: hidden;
           font-size: 20px;
           text-align: center;
+          padding-bottom: 3px;
           
         }
       }
